sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:8: error: not found: value &&
      while (k>0)&&(plusPetit(v, (k-1))) {
                 ^